--- a/src/__styles__/__ui_components__/media-card.scss
+++ b/src/__styles__/__ui_components__/media-card.scss
@@ -31,6 +31,7 @@
         &--tags {
           span {
             font-size: .75rem;
+            font-weight: 500;
             color: gray;
             margin-right: .45rem;
           }
